validation to form fields
added 2 validators

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -9,3 +9,7 @@ ticket_index:
 ticket_check_tickets:
     path:     /ticket/check
     defaults: { _controller: TicketBundle:Ticket:getTicketNumber }
+
+ticket_thanks:
+    path:     /ticket/thanks
+    defaults: { _controller: TicketBundle:Ticket:thanks }
