--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,7 @@
 services:
-#    ticket.example:
-#        class: TicketBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    ticket.order.validator:
+        class: TicketBundle\Validator\Order\OrderValidator
+        arguments:
+            entityManager: "@doctrine.orm.entity_manager"
+        tags:
+            - { name: validator.constraint_validator, alias: ticket.order.validator }
